--- a/leetcode/arrays_and_hashing/CMakeLists.txt
+++ b/leetcode/arrays_and_hashing/CMakeLists.txt
@@ -24,6 +24,12 @@ target_link_libraries(two_sum PUBLIC GTest::gtest_main)
 add_executable(longest_common_prefix longest_common_prefix.cpp)
 target_link_libraries(longest_common_prefix PUBLIC GTest::gtest_main)
 
+add_executable(group_anagrams group_anagrams.cpp)
+target_link_libraries(group_anagrams PUBLIC GTest::gtest_main)
+
+add_executable(pascal_triangle pascal_triangle.cpp)
+target_link_libraries(pascal_triangle PUBLIC GTest::gtest_main)
+
 gtest_discover_tests(concatenation_of_array)
 gtest_discover_tests(contains_duplicate)
 gtest_discover_tests(replace_with_greates_on_right)
@@ -31,3 +37,5 @@ gtest_discover_tests(is_subsequence)
 gtest_discover_tests(length_of_last_word)
 gtest_discover_tests(two_sum)
 gtest_discover_tests(longest_common_prefix)
+gtest_discover_tests(group_anagrams)
+gtest_discover_tests(pascal_triangle)
