--- a/leetcode/arrays_and_hashing/CMakeLists.txt
+++ b/leetcode/arrays_and_hashing/CMakeLists.txt
@@ -30,6 +30,9 @@ target_link_libraries(group_anagrams PUBLIC GTest::gtest_main)
 add_executable(pascal_triangle pascal_triangle.cpp)
 target_link_libraries(pascal_triangle PUBLIC GTest::gtest_main)
 
+add_executable(remove_element remove_element.cpp)
+target_link_libraries(remove_element PUBLIC GTest::gtest_main)
+
 gtest_discover_tests(concatenation_of_array)
 gtest_discover_tests(contains_duplicate)
 gtest_discover_tests(replace_with_greates_on_right)
@@ -39,3 +42,4 @@ gtest_discover_tests(two_sum)
 gtest_discover_tests(longest_common_prefix)
 gtest_discover_tests(group_anagrams)
 gtest_discover_tests(pascal_triangle)
+gtest_discover_tests(remove_element)
