--- a/leetcode/arrays_and_hashing/CMakeLists.txt
+++ b/leetcode/arrays_and_hashing/CMakeLists.txt
@@ -33,6 +33,10 @@ target_link_libraries(pascal_triangle PUBLIC GTest::gtest_main)
 add_executable(remove_element remove_element.cpp)
 target_link_libraries(remove_element PUBLIC GTest::gtest_main)
 
+
+add_executable(unique_email_addresses unique_email_addresses.cpp)
+target_link_libraries(unique_email_addresses PUBLIC GTest::gtest_main)
+
 gtest_discover_tests(concatenation_of_array)
 gtest_discover_tests(contains_duplicate)
 gtest_discover_tests(replace_with_greates_on_right)
@@ -43,3 +47,4 @@ gtest_discover_tests(longest_common_prefix)
 gtest_discover_tests(group_anagrams)
 gtest_discover_tests(pascal_triangle)
 gtest_discover_tests(remove_element)
+gtest_discover_tests(unique_email_addresses)
