--- a/leetcode/arrays_and_hashing/CMakeLists.txt
+++ b/leetcode/arrays_and_hashing/CMakeLists.txt
@@ -58,6 +58,9 @@ target_link_libraries(dissapeared_numbers PUBLIC GTest::gtest_main)
 add_executable(maximum_number_of_balloons maximum_number_of_balloons.cpp)
 target_link_libraries(maximum_number_of_balloons PUBLIC GTest::gtest_main)
 
+add_executable(word_pattern word_pattern.cpp)
+target_link_libraries(word_pattern PUBLIC GTest::gtest_main)
+
 gtest_discover_tests(concatenation_of_array)
 gtest_discover_tests(contains_duplicate)
 gtest_discover_tests(replace_with_greates_on_right)
@@ -76,3 +79,4 @@ gtest_discover_tests(find_pivot_index)
 gtest_discover_tests(range_sum_query)
 gtest_discover_tests(dissapeared_numbers)
 gtest_discover_tests(maximum_number_of_balloons)
+gtest_discover_tests(word_pattern)
