--- a/leetcode/arrays_and_hashing/CMakeLists.txt
+++ b/leetcode/arrays_and_hashing/CMakeLists.txt
@@ -61,6 +61,9 @@ target_link_libraries(maximum_number_of_balloons PUBLIC GTest::gtest_main)
 add_executable(word_pattern word_pattern.cpp)
 target_link_libraries(word_pattern PUBLIC GTest::gtest_main)
 
+add_executable(hash_set hash_set.cpp)
+target_link_libraries(hash_set PUBLIC GTest::gtest_main)
+
 gtest_discover_tests(concatenation_of_array)
 gtest_discover_tests(contains_duplicate)
 gtest_discover_tests(replace_with_greates_on_right)
@@ -80,3 +83,4 @@ gtest_discover_tests(range_sum_query)
 gtest_discover_tests(dissapeared_numbers)
 gtest_discover_tests(maximum_number_of_balloons)
 gtest_discover_tests(word_pattern)
+gtest_discover_tests(hash_set)
