--- a/leetcode/arrays_and_hashing/CMakeLists.txt
+++ b/leetcode/arrays_and_hashing/CMakeLists.txt
@@ -64,6 +64,9 @@ target_link_libraries(word_pattern PUBLIC GTest::gtest_main)
 add_executable(hash_set hash_set.cpp)
 target_link_libraries(hash_set PUBLIC GTest::gtest_main)
 
+add_executable(hash_map hash_map.cpp)
+target_link_libraries(hash_map PUBLIC GTest::gtest_main)
+
 gtest_discover_tests(concatenation_of_array)
 gtest_discover_tests(contains_duplicate)
 gtest_discover_tests(replace_with_greates_on_right)
@@ -84,3 +87,4 @@ gtest_discover_tests(dissapeared_numbers)
 gtest_discover_tests(maximum_number_of_balloons)
 gtest_discover_tests(word_pattern)
 gtest_discover_tests(hash_set)
+gtest_discover_tests(hash_map)
